0.3.1.0:

  - NSGraph:

    - added Monoid instance with a Label constraint

  - RDFLabel:

    - added IsString instance

    - added ToRDFLabel and FromRDFLabel type classes for converting to
      and from RDFLabel along with instances for some standard Haskell
      types.

  - UTCTime support (To/FromRDFLabel) has required adding old-locale
    and time to the package constraints.

  - added xsd_dateTime export to Swish.RDF.Vocabulary

0.3.0.3:

  - to be written

0.3.0.2:

  - to be written

0.3.0.1:

  - to be written

0.2.1 to 0.3.0.0:

  - Renamed module hierarchy from

      Swish.HaskellRDF.*
      Swish.HaskellUtils.*

    to

      Swish.RDF.*
      Swish.Utils.*

  - removed modules, either because un-needed or replaced
    by other libraries:

    *) replaced with Data.Traversable instances

      Swish.HaskellUtils.FunctorM

    *) replaced with routines from Network.URI

      Swish.HaskellRDF.ProcessURI
      Swish.HaskellRDF.ParseURI

    *) copy of a Parsec module

      Swish.HaskellRDF.ParsecLanguage

    *) Replaced with Data.List.sort as only used the 
       stableQuickSort routine

      Swish.HaskellRDF.Sort.*

    *) Replaced use with simple parsec parser

      Swish.HaskellRDF.Dfa.Dfa

    *) Replaced with 'Either String'

      Swish.HaskellUtils.ErrorM

    *) Un-needed 

      Swish.HaskellRDF.Parse
      Swish.HaskelUtils.AccumulateM
      Swish.HaskellUtils.TestHelpers

  - removed Either String instance from ErrorM

  - should now compile with mtl-2

  - added upper and lower bounds to package dependencies

  - a number of Test executables have been removed, either
    because of a removed module or missing data files.

  - updated Haddock documentation to build

  - added the following flags

      tests   - compile tests or not?
      hpc     - compile tests with -hpc?

  - support for the NTriples format has been added (e.g. the -nt
    flag in Swish)

  - the N3 parser and formatter have been re-written to better